# eidetic-sample-tools

./: .gitignore  ABLETON-TOOLING-STATUS.md  OPERATING-BRIEF-ASSESSMENT.md  README.md  STATUS.md
ableton-tools/: README.md  pyproject.toml
ableton-tools/src/abletontools/: cli.py  index.py  read.py  samples.py
ableton-tools/tests/: test_cli.py  test_index.py  test_read.py  test_samples.py
decisions/: 2026-07-07-sample-management-advance-assessment.md  2026-07-09-drum-role-classifier-downgraded.md
docs/: FOUNDATION-V1-DECISION-CORPUS.md  ROADMAP.md  SAMPLE-FOUNDATION-WORKFLOW.md  STORAGE-AND-WORKFLOW.md
docs/superpowers/plans/: 2026-06-17-sample-library-cleanup.md  2026-06-26-ableton-als-introspection.md  2026-06-26-bounce-analysis-a1.md  2026-06-26-midi-generator.md  2026-06-26-stem-separation.md  2026-07-07-sample-intelligence-pilot.md  2026-07-07-sample-intelligence-tier1-audio-features.md  2026-07-08-high-precision-kicks-gate.md  2026-07-08-near-dupe-pilot.md  2026-07-12-eidetic-sample-tools-documentation.md
docs/superpowers/specs/: 2026-06-17-sample-library-cleanup-design.md  2026-06-21-samples-two-zone-reorg-design.md  2026-06-26-ableton-als-introspection-design.md  2026-06-26-bounce-analysis-a1-design.md  2026-06-26-midi-generator-design.md  2026-06-26-stem-separation-design.md  2026-07-07-sample-intelligence-audit.md  2026-07-08-near-dupe-pilot-design.md
library-tools/: .gitignore  README.md  pyproject.toml
library-tools/docs/superpowers/plans/: 2026-06-18-review-abbrev-classification.md
library-tools/src/librarytools/: __init__.py  analyze.py  analyze_features.py  analyze_outputs.py  analyze_rules.py  analyze_sources.py  analyze_types.py  audiofeatures.py  benchmark.py  benchmark_cli.py  classify.py  config.py  curate.py  curate_cli.py  dedupe.py  featurecache.py  intake.py  inventory.py  moves.py  neardupe.py  probe.py  profile_cli.py  profiles.py  review.py  rolecleanup.py
library-tools/tests/: test_analyze.py  test_audiofeatures.py  test_benchmark.py  test_classify.py  test_config.py  test_curate.py  test_dedupe.py  test_featurecache.py  test_intake.py  test_inventory.py  test_moves.py  test_neardupe.py  test_probe.py  test_profiles.py  test_review.py  test_rolecleanup.py
profiles/devices/: digitakt-mki.toml  octatrack-mkii.toml  tr8s.toml
profiles/studios/: eidetic-studio.toml
sample-tools/: README.md
sample-tools/src/sampletools/: cli.py  config.py  export.py
sample-tools/tests/: test_foundation_e2e.py  test_profile_export.py
