[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librarytools"
version = "0.1.0"
description = "Sort the SSD sample library by sound type and de-dupe it (reversible)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "soundfile>=0.13",
]  # ffmpeg/ffprobe used via subprocess for format fallbacks and duration probes

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sample-classify = "librarytools.classify:main"
sample-dedupe = "librarytools.dedupe:main"
sample-intake = "librarytools.intake:main"
sample-review = "librarytools.review:main"
sample-sort = "librarytools.sort:main"
sample-analyze = "librarytools.analyze:main"

[tool.setuptools.packages.find]
where = ["src"]
