[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librarytools"
version = "0.1.0"
description = "Sort the SSD sample library by sound type and de-dupe it (reversible)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "soundfile>=0.13",
]  # ffmpeg/ffprobe used via subprocess for format fallbacks and duration probes

[project.optional-dependencies]
dev = ["pytest>=8"]
# Drum-role classifier vote (sample-analyze --classifier). Heavy + optional so the core
# tidy tools stay light. Weights are user-supplied (unlicensed upstream), never shipped.
classifier = ["torch>=2.2", "librosa>=0.10"]

[project.scripts]
sample-classify = "librarytools.classify:main"
sample-dedupe = "librarytools.dedupe:main"
sample-intake = "librarytools.intake:main"
sample-review = "librarytools.review:main"
sample-sort = "librarytools.sort:main"
sample-analyze = "librarytools.analyze:main"
sample-near-dupes = "librarytools.neardupe:main"
sample-role-cleanup = "librarytools.rolecleanup_cli:main"
sample-benchmark = "librarytools.benchmark_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
